--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "nedb": "^1.8.0",
     "node-telegram-bot-api": "^0.66.0",
+    "path": "^0.12.7",
     "telegraf": "^4.16.3"
   }
 }
