--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tonx/core": "^1.2.0",
     "dotenv": "^16.4.7",
+    "light-bolt11-decoder": "^3.2.0",
     "nedb": "^1.8.0",
-    "node-telegram-bot-api": "^0.66.0",
     "path": "^0.12.7",
     "telegraf": "^4.16.3"
   }
